--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 h1 {
     font-family: 'Zilla Slab', serif;
-    color: #f2777a;
+    color: #5a145f;
 }
 
 h2 {
@@ -14,7 +14,7 @@ h3 {
 
 h4 {
     font-family: 'Zilla Slab', serif;
-    color: #f2777a;
+    color: #6f4ab4;
 }
 
 h5 {
